# sigstore-a2a

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  signed-example.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflow-templates/: sign-agent-card.properties.json  sign-agent-card.yml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  lint.yml  publish.yml  release.yml  security.yml  test-matrix.yml
docs/: cli.md  contributing.md  getting-started.md  index.md
docs/api/: index.md  models.md  signer.md  verifier.md
examples/: README.md  data-analysis-agent.json  georoute-agent.json  signed-data-analysis-agent.json  signed-georoute-agent.json
sigstore_a2a/: __init__.py  provenance.py  signer.py  verifier.py
sigstore_a2a/cli/: __init__.py  main.py  serve.py  sign.py  verify.py
sigstore_a2a/models/: __init__.py  agent_card.py  provenance.py  signature.py
sigstore_a2a/utils/: __init__.py  ci.py  crypto.py
src/sigstore_a2a/: signer.py  verifier.py
src/sigstore_a2a/cli/: sign.py  verify.py
src/sigstore_a2a/models/: __init__.py  provenance.py
tests/: __init__.py  test_compat.py  test_models.py  test_utils.py  test_verifier.py
tests/assets/: example_agentcard.signed.json
tests/assets/trust_config/: config.3.6.4.json
tests/cli/: test_cli_serve.py  test_cli_sign.py  test_cli_verify.py
tests/historic/v0_2_x/: agentcard.json  agentcard_minimal.json
tests/historic/v1_0/: agentcard.json  agentcard_minimal.json
